syntax = "proto3"; //定义了我们使用的Protocol Buffers版本。

 //表明我们定义了一个命名为Simple的服务(接口)，内部有一个远程rpc方法，名字为SayHello。
 //我们只要在server端实现这个接口，在实现类中书写我们的业务代码。在client端调用这个接口。
 service Simple{
   rpc Query(HelloRequest) returns (HelloReplay){}
   rpc VagueQuery(HelloRequest) returns (HelloReplay){}
   rpc SortQuery(HelloRequest) returns (HelloReplay){}
   rpc Get(HelloRequest) returns (HelloReplay){}
   rpc Insert(HelloRequest) returns (HelloReplay){}
   rpc Update(HelloRequest) returns (HelloReplay){}
   rpc UpLoad(HelloRequest) returns (HelloReplay){}
   rpc DownLoad(HelloRequest) returns (HelloReplay){}
   rpc ExcelDownLoad(HelloRequest) returns (HelloReplay){}
 }

 //请求的结构体
 message HelloRequest{
     string name = 1;
 }
 //返回的结构体
 message HelloReplay{
     string message = 1;
 }